# load-test

./: .gitignore  catalog.py  identity.py  locust.conf  main.py  order.py  payment.py  pyproject.toml
